# NSkbd

./: Cargo.toml  NSkbd.sh  README.md  build.sh  kbd.py
src/: main.rs
