[package]
name = "NSKeyboardLayoutSwitcher"
version = "0.1.0"
edition = "2021"
authors = ["Vladgobelen vladgobelen@gmail.com"]
description = "Keyboard layout switcher that remembers layouts for different windows"
license = "MIT"
repository = ""

[dependencies]
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
rdev = "0.5.3"