[package]
name = "NSKeyboardLayoutSwitcher"
version = "0.1.0"
edition = "2021"
authors = ["Vladgobelen vladgobelen@gmail.com"]
description = "Keyboard layout switcher that remembers layouts for different windows"
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4"
rdev = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
x11rb = { version = "0.13", features = ["xkb"] }